# cudart

./: Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs  runtime.rs
src/ffi/: mod.rs
src/ffi/v10_0/: _cuda_runtime_api.rs
src/ffi/v8_0/: _cuda_runtime_api.rs
src/ffi/v9_0/: _cuda_runtime_api.rs
src/ffi/v9_2/: _cuda_runtime_api.rs
tests/: device.rs  version.rs
