[package]
name = "cudart"
version = "0.2.0-devel"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "CUDA runtime API wrappers."
repository = "https://github.com/peterhj/cudart"
keywords = ["cuda"]
build = "build.rs"

[features]
default         = []
cuda_6_5        = []
cuda_7_0        = ["gte_cuda_7_0"]
cuda_7_5        = ["gte_cuda_7_0", "gte_cuda_7_5"]
cuda_8_0        = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0"]
cuda_9_0        = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0"]
cuda_9_1        = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1"]
cuda_9_2        = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1", "gte_cuda_9_2"]
cuda_10_0       = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1", "gte_cuda_9_2", "gte_cuda_10_0"]
gte_cuda_7_0    = []
gte_cuda_7_5    = []
gte_cuda_8_0    = []
gte_cuda_9_0    = []
gte_cuda_9_1    = []
gte_cuda_9_2    = []
gte_cuda_10_0   = []
cuda_sys        = ["cuda-sys", "cuda_8_0"]

[build-dependencies]
bindgen = "^0.38"

[dependencies]
cuda-sys = { git = "https://github.com/rust-cuda/cuda-sys", rev = "127043c650112f00c6042f3dd763867986eaabba", optional = true }
static_assertions = "0.3.1"

[lib]
name = "cudart"
path = "src/lib.rs"
