[package]
name = "cudart"
version = "0.2.0-devel"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "CUDA runtime API wrappers."
repository = "https://github.com/peterhj/cudart"
keywords = ["cuda"]
build = "build.rs"

[features]
default         = []
fresh           = ["bindgen"]
cuda_6_5        = ["cuda-ffi-types/cuda_6_5"]
cuda_7_0        = ["cuda-ffi-types/cuda_7_0", "cuda_gte_7_0"]
cuda_7_5        = ["cuda-ffi-types/cuda_7_5", "cuda_gte_7_0", "cuda_gte_7_5"]
cuda_8_0        = ["cuda-ffi-types/cuda_8_0", "cuda_gte_7_0", "cuda_gte_7_5", "cuda_gte_8_0"]
cuda_9_0        = ["cuda-ffi-types/cuda_9_0", "cuda_gte_7_0", "cuda_gte_7_5", "cuda_gte_8_0", "cuda_gte_9_0"]
cuda_9_1        = ["cuda-ffi-types/cuda_9_1", "cuda_gte_7_0", "cuda_gte_7_5", "cuda_gte_8_0", "cuda_gte_9_0", "cuda_gte_9_1"]
cuda_9_2        = ["cuda-ffi-types/cuda_9_2", "cuda_gte_7_0", "cuda_gte_7_5", "cuda_gte_8_0", "cuda_gte_9_0", "cuda_gte_9_1", "cuda_gte_9_2"]
cuda_10_0       = ["cuda-ffi-types/cuda_10_0", "cuda_gte_7_0", "cuda_gte_7_5", "cuda_gte_8_0", "cuda_gte_9_0", "cuda_gte_9_1", "cuda_gte_9_2", "cuda_gte_10_0"]
cuda_gte_7_0    = []
cuda_gte_7_5    = []
cuda_gte_8_0    = []
cuda_gte_9_0    = []
cuda_gte_9_1    = []
cuda_gte_9_2    = []
cuda_gte_10_0   = []
cuda_sys        = ["cuda_8_0", "cuda-sys", "static_assertions"]

[build-dependencies]
bindgen = { version = "^0.45", optional = true }

[dependencies]
cuda-ffi-types = { git = "https://github.com/peterhj/cuda-ffi-types" }
cuda-sys = { git = "https://github.com/rust-cuda/cuda-sys", rev = "127043c650112f00c6042f3dd763867986eaabba", optional = true }
static_assertions = { version = "0.3.1", optional = true }

[lib]
name = "cudart"
path = "src/lib.rs"
